--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
     gap: 4px;
 }
 
-#container {
+#webview-container {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -25,8 +25,17 @@ html, body {
     width: 100%;
 }
 
-#webview {
-    flex: 1;
-    width: 100%;
-    border: none;
+
+webview {
+	
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border: none;
 }
+
+#tab-dropdown {
+    width: 500px;
+}
+
